(BE) applied small adjustments